--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -26,6 +26,18 @@
             android:paddingRight="20dp"
             android:text="@string/btnTakePicture"
             android:textColor="@color/white" />
+        
+        
+        <Button
+            android:id="@+id/btnCapturefromphoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:background="@color/btn_bg"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="@string/btnTakePhoto"
+            android:textColor="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
